Endpoint 'bank-accounts/{bank_code}/certificates/actual' to enable API access refactored (before /init) and documentation has been improved. Certificate model introduced. #TECO-177
